--- a/cloud-todo/.env.example
+++ b/cloud-todo/.env.example
@@ -7,3 +7,7 @@ VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
+
+# Google AI (Gemini) Configuration
+# Get a free API key from https://aistudio.google.com/app/apikey
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
