--- a/cloud-todo/package.json
+++ b/cloud-todo/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@google/generative-ai": "^0.24.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.5.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-calendar": "^6.0.0",
+    "react-dom": "^19.1.1",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
